# CIRCULATION

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shader/: gridRenderer.frag  gridRenderer.geom  gridRenderer.vert  gridineRenderer.geom  icosahedron.frag  icosahedron.vert  scalarRenderer.geom  streamline.geom  streamline.vert  vectorRenderer.geom
shader/coordinateSystems/: cartesianCoordinates2D.glsl  geographicalCoordinates2D.glsl
src/: Application.cpp  Application.cu  Application.h  Grid.cu  Grid.h  GridReference.h  Renderer.cu  Renderer.h  boundaryConditions.h  coordinateTransforms.h  dummy.cpp  enums.h  finiteDifferences.h  globalSettings.h  icosphere.h  interpolation.h  main.cpp  main.cu
src/coordinateSystems/: CartesianCoordinates2D.cu  CartesianCoordinates2D.h  CoordinateSystem.h  GeographicalCoordinates2D.cu  GeographicalCoordinates2D.h
src/simulationModels/: CosineAdvection.cu  CosineAdvection.h  PoleAdvection.cu  PoleAdvection.h  RenderDemoSimulation.h  ShallowWaterModel.cu  ShallowWaterModel.h  Simulation.h  TestSimulation.cu  TestSimulation.h
